Bug 1273833 - Always return AbortError of the Open DB Request if the Upgrade Transaction is aborted. r=khuey